# cle-python-django-talk

./: .flake8  LICENSE  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
clubhouse/clubhouse/: asgi.py  settings.py  urls.py  wsgi.py
clubhouse/cool_kids_only_app/: apps.py
demo_site/demo_site/: settings.py  urls.py
