[tool.poetry]
authors = ["Joe Sadoski <jdsadoski@gmail.com>"]
description = "Repository for my talk on Django utilities and overlooked features for the Cleveland Python User Group, May 2022."
license = "MIT"
name = "cle-python-django-talk"
version = "0.1.0"

[tool.poetry.dependencies]
Django = "^4.0.4"
python = "^3.10"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
flake8 = "^4.0.1"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]
